# DofusLike

./: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  Project.sln  README_Mision2.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
data/: map01.json  map02.csv  maze_test.json  test_astar.json
src/: main.cpp
src/app/: App.cpp  App.h
src/map/: Isometric.cpp  Isometric.h  Map.cpp  Map.h
src/systems/: Animation.cpp  Animation.h  Assets.cpp  Assets.h  Display.cpp  Display.h  HUD.cpp  HUD.h  Json.cpp  Json.hpp  LineOfSight.cpp  LineOfSight.h  Pathfinding.cpp  Pathfinding.h  Spells.cpp  Spells.h  TurnSystem.cpp  TurnSystem.h
src/units/: Entity.cpp  Entity.cpp.backup  Entity.h  Pawn.cpp  Pawn.h
